--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^5.1.0",
-    "rxjs": "^6.5.5"
+    "rxjs": "^6.5.5",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.4",
